# server/Application/Usuarios/DTOs/GerarConviteRequestDTO.cs
@@ -1,0 +1,13 @@
+public record GerarConviteRequestDTO(
+string Email,
+string Nome,
+string Role
+);
+
+public record ConviteDTO(
+string Token,
+string Email,
+string Nome,
+string Role,
+DateTime Expiracao
+);
